Fix T67140: transforming bone does not update bone tab in properties editor