source/blender/editors/space_buttons/space_buttons.c
@@ -398,8 +398,6 @@ static void buttons_area_listener(wmWindow *UNUSED(win),
           buttons_area_redraw(sa, BCONTEXT_DATA); /* autotexpace flag */
           break;
         case ND_POSE:
-          buttons_area_redraw(sa, BCONTEXT_DATA);
-          break;
         case ND_BONE_ACTIVE:
         case ND_BONE_SELECT:
           buttons_area_redraw(sa, BCONTEXT_BONE);
